--- a/package.json
+++ b/package.json
@@ -8,14 +8,22 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/styled": "^11.6.0",
     "@reduxjs/toolkit": "^1.6.2",
     "@tailwindcss/line-clamp": "^0.2.2",
+    "@types/bcryptjs": "^2.4.2",
+    "@types/next-auth": "^3.15.0",
     "@types/react-cookies": "^0.1.0",
     "@types/react-redux": "^7.1.20",
-    "next": "12.0.4",
+    "bcryptjs": "^2.4.3",
+    "mongodb": "^3.5.9",
+    "next": "^12.0.7",
+    "next-auth": "^3.29.0",
+    "notistack": "^2.0.3",
     "react": "17.0.2",
     "react-cookie": "^4.1.1",
     "react-dom": "17.0.2",
+    "react-hook-form": "^7.21.0",
     "react-redux": "^7.2.6"
   },
   "devDependencies": {
